--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,6 +98,12 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+
+            // ✅ Debug는 패키지명 분리 (동시 설치 가능)
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+
+            resValue "string", "app_name", "ProductExpiryManager (Debug)"
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
