--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.5.1",
+    "@react-native-documents/picker": "^11.0.3",
     "@react-native/new-app-screen": "0.83.0",
     "react": "19.2.0",
     "react-native": "0.83.0",
+    "react-native-fs": "^2.20.0",
     "react-native-image-resizer": "^1.4.5",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.5.2",
+    "react-native-share": "^12.2.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vision-camera": "^4.7.3"
   },
