--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-share": "^12.2.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.3"
   },
   "devDependencies": {
