feat(backup): DB+이미지 ZIP 백업/복원(SAF) 구현 및 안정화
- SQLite 실제 DB 경로(databases) 기준으로 전체 백업/복원 구현
- 이미지 파일을 영구 경로(images/master)로 정규화 후 백업
- SAF(saveDocuments) 기반 저장 위치 선택 지원(권한 문제 해결)
- 복원 시 DB 파일 교체 후 재오픈 처리
- 백업/복원 취소(OPERATION_CANCELED) UX 안정화

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-share": "^12.2.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-vision-camera": "^4.7.3"
+    "react-native-vision-camera": "^4.7.3",
+    "react-native-zip-archive": "^7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
