--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.1"
+        versionName "1.0.2"
 
-        resValue "string", "app_name", "ProductExpiryManager v${versionName}"
+        resValue "string", "app_name", "유통기한관리"
     }
     signingConfigs {
         debug {
@@ -103,7 +103,7 @@ android {
             applicationIdSuffix ".debug"
             versionNameSuffix "-debug"
 
-            resValue "string", "app_name", "ProductExpiryManager (Debug)"
+            resValue "string", "app_name", "유통기한관리 (Debug)"
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -116,7 +116,7 @@ android {
     applicationVariants.all { variant ->
         if (variant.buildType.name == "release") {
             variant.outputs.all { output ->
-                outputFileName = "ProductExpiryManager-${variant.versionName}.apk"
+                outputFileName = "유통기한관리-${variant.versionName}.apk"
             }
         }
     }
